# another-redis-replacement

./: Makefile  README.md  pyproject.toml
arr/: __main__.py
arr/core/: handler.py  memory.py  resp.py  server.py
arr/core/database/: dicth.py  entry.py
arr/exceptions/: type_not_found_ex.py
arr/request/: array.py  base.py
arr/utils/: breader.py
tests/: test_dict.py
