[tool.poetry]
name = "arr"
version = "0.1.0"
description = ""
authors = ["Iago Corrêa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvloop = "^0.19.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v -s"
testpaths = ["tests"]
